--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -37,7 +37,7 @@
         </div>
         <div class="hero-image">
             <div class="ani-rtl">
-                <img src="F:\visual st\Portfolio\IMG-7560-removebg-preview.png" alt="Profile Image">
+                <img src="https://github.com/himanshukhtri/My-Portfolio-Website/blob/main/Portfolio/IMG-7560-removebg-preview.png?raw=true" alt="Profile Image">
             </div>
         </div>
     </div>
