--- a/Portfolio/About.html
+++ b/Portfolio/About.html
@@ -74,7 +74,7 @@
     <div class="footer-right">
     <div class="footer-item">
         <a href="https://www.linkedin.com/in/himanshu-himanshu-448728182/">
-            <img src="C:\Users\Himanshu\Downloads\Screenshot 2025-01-17 091541.png" alt="LinkedIn" style="width: 30px; height: 30px;">
+            <img src="https://github.com/himanshukhtri/My-Portfolio-Website/blob/main/Portfolio/Screenshot%202025-01-17%20091541.png?raw=true" alt="LinkedIn" style="width: 30px; height: 30px;">
         </a>
     </div>
     </div>
