--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -10,10 +10,10 @@
 <body>
     <div class="header-nav">
         <div class="nav-item">
-            <a href="F:\visual st\Portfolio\Portfolio.html"> <strong>Home</strong> </a>
+            <a href="https://himanshukhtri.github.io/My-Portfolio-Website/Portfolio/Portfolio.html"> <strong>Home</strong> </a>
         </div>
         <div class="nav-item">
-            <a href="F:\visual st\Portfolio\About.html"> About Me</a>
+            <a href="https://himanshukhtri.github.io/My-Portfolio-Website/Portfolio/About.html"> About Me</a>
         </div>
     </div>
     <div class="hero">
