--- a/Portfolio/About.html
+++ b/Portfolio/About.html
@@ -10,10 +10,10 @@
 <body>
     <div class="header-nav">
         <div class="nav-item">
-            <a href="F:\visual st\Portfolio\Portfolio.html"> Home </a>
+            <a href="https://himanshukhtri.github.io/My-Portfolio-Website/Portfolio/Portfolio.html"> Home </a>
         </div>
         <div class="nav-item">
-            <a href="F:\visual st\Portfolio\About.html"> <strong>About Me</strong></a>
+            <a href="https://himanshukhtri.github.io/My-Portfolio-Website/Portfolio/About.html"> <strong>About Me</strong></a>
         </div>
     </div>
     
