--- a/Portfolio/About.html
+++ b/Portfolio/About.html
@@ -6,6 +6,7 @@
     <title>About - Himanshu</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="portfolio.css">
+    <link rel="icon" type="image/x-icon" href="https://github.com/himanshukhtri/My-Portfolio-Website/blob/main/Portfolio/faviconhk.jpg?raw=true">
 </head>
 <body>
     <div class="header-nav">
