--- a/Portfolio/Portfolio.html
+++ b/Portfolio/Portfolio.html
@@ -6,16 +6,24 @@
     <title>Himanshu's Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="portfolio.css">
-    <link rel="icon" type="image/x-icon" href="https://github.com/himanshukhtri/My-Portfolio-Website/blob/main/Portfolio/faviconhk.jpg?raw=true">
+    <link rel="icon" type="image/x-icon" href="https://github.com/himanshukhtri/My-Portfolio-Website/blob/main/Portfolio/faviconhk.jpg?raw=true
+">
 </head>
 <body>
     <div class="header-nav">
+        <div class="nav-left">
+            <div class="nav-item">
+                <a href="https://himanshukhtri.github.io/My-Portfolio-Website/Portfolio/Portfolio.html"> <img src="https://github.com/himanshukhtri/My-Portfolio-Website/blob/main/Portfolio/hklogoport.png?raw=true" style="height: 25px; width: 25px;"> </a>
+            </div>
+        </div>
+        <div class="nav-right">
         <div class="nav-item">
             <a href="https://himanshukhtri.github.io/My-Portfolio-Website/Portfolio/Portfolio.html"> <strong>Home</strong> </a>
         </div>
         <div class="nav-item">
             <a href="https://himanshukhtri.github.io/My-Portfolio-Website/Portfolio/About.html"> About Me</a>
         </div>
+    </div>
     </div>
     <div class="hero">
         <div class="hero-overlay"></div>
