--- a/Portfolio/About.html
+++ b/Portfolio/About.html
@@ -10,12 +10,21 @@
 </head>
 <body>
     <div class="header-nav">
+        <div class="nav-left">
+            <div class="nav-item">
+                <a href="https://himanshukhtri.github.io/My-Portfolio-Website/Portfolio/Portfolio.html"> 
+                    <img src="https://github.com/himanshukhtri/My-Portfolio-Website/blob/main/Portfolio/hklogoport.png?raw=true" style="height: 25px; width: 25px;"> </a>
+            </div>
+        </div>
+        <div class="nav-right">
         <div class="nav-item">
             <a href="https://himanshukhtri.github.io/My-Portfolio-Website/Portfolio/Portfolio.html"> Home </a>
         </div>
         <div class="nav-item">
-            <a href="https://himanshukhtri.github.io/My-Portfolio-Website/Portfolio/About.html"> <strong>About Me</strong></a>
+            <a href="https://himanshukhtri.github.io/My-Portfolio-Website/Portfolio/Portfolio.html"> <strong>About Me </strong> </a>
         </div>
+        </div>
+        
     </div>
     
     <section style="display: flex; align-items: center; padding-top: 150px;">
